@@ -163,6 +163,8 @@ EXTRA_DIST = \
     bug-153.out bug-153.xsl \
     bug-154.out bug-154.xsl \
     bug-155.out bug-155.xsl \
+    bug-156.err bug-156.out bug-156.xsl \
+    bug-156.imp1.imp bug-156.imp2.imp \
     character.out character.xsl \
     character2.out character2.xsl \
     itemschoose.out itemschoose.xsl \
