@@ -1,0 +1,16 @@
+<?xml version="1.0"?>
+<xsl:stylesheet xmlns:xsl="http://www.w3.org/1999/XSL/Transform" version="1.0">
+
+<xsl:import href="bug-156.imp2.imp"/>
+
+<xsl:template name="message">
+  <xsl:message>From first import</xsl:message>
+  <xsl:apply-imports/>
+</xsl:template>
+
+<xsl:template match="/">
+  <xsl:call-template name="message"/>
+</xsl:template>
+
+</xsl:stylesheet>
+
