@@ -1,0 +1,10 @@
+<?xml version="1.0"?>
+<xsl:stylesheet xmlns:xsl="http://www.w3.org/1999/XSL/Transform" version="1.0">
+
+<xsl:template match="/">
+  <xsl:message>From second import</xsl:message>
+  <xsl:apply-imports/>
+</xsl:template>
+
+</xsl:stylesheet>
+
